--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.3",
     "@reduxjs/toolkit": "^2.5.1",
+    "@storybook/addon-actions": "^8.5.3",
+    "@storybook/addon-controls": "^8.5.3",
     "@types/react": "~18.2.79",
     "expo": "^51.0.32",
     "expo-constants": "~16.0.2",
+    "miragejs": "^0.1.48",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -18,9 +21,8 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/slider": "4.5.2",
-    "@storybook/addon-ondevice-actions": "^8.3.5",
     "@storybook/addon-ondevice-controls": "^8.3.5",
-    "@storybook/react-native": "^8.3.5",
+    "@storybook/react-native": "^8.5.3",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
     "react-native-gesture-handler": "~2.16.1",
@@ -35,9 +37,9 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "storybook-generate": "sb-rn-get-stories -js",
-    "storybook": "cross-env expo start",
-    "storybook:ios": "cross-env expo start --ios",
-    "storybook:android": "cross-env expo start --android"
+    "storybook": "cross-env STORYBOOK_ENABLED='true' expo start",
+    "storybook:ios": "cross-env STORYBOOK_ENABLED='true' expo start --ios",
+    "storybook:android": "cross-env STORYBOOK_ENABLED='true' expo start --android"
   },
   "version": "1.0.0",
   "private": true,
